# mattermost-mcp

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/: claude_config.json  demo.py  test_connection.py
mattermost_mcp/: __init__.py  client.py  server.py
mattermost_mcp/tools/: __init__.py
tests/: test_mattermost_mcp.py
